--- a/README
+++ b/README
@@ -12,6 +12,7 @@ Moohanad Rasheed
 Credit:
 Star Rating CSS functionality from:  http://www.komodomedia.com/blog/2007/01/css-star-rating-redux/
 User and Sessions functionality taken from sample_app.
+Base search code from http://railscasts.com/episodes/37-simple-search-form
 
 ----------------------------------------------------------------------------------
 
